--- a/paper/build
+++ b/paper/build
@@ -1,3 +1,7 @@
+#!/bin/bash
+
+(cd ../data && Rscript plots.R)
+
 pdflatex flocking_simulator.tex
 bibtex flocking_simulator
 pdflatex flocking_simulator.tex
